fix: :bug: fix issue z-index turnos

--- a/sass/components/_turnos.scss
+++ b/sass/components/_turnos.scss
@@ -83,7 +83,6 @@
         border-radius: 0 0 10px 10px;
         box-shadow: 1px 10px 23px -2px rgba(0, 0, 0, 0.068);
         border: 1px solid #4444445b;
-        z-index: 100;
     }
 
     &__description {
